--- a/templates/MichaelChinn CSS_SCSS.xml
+++ b/templates/MichaelChinn CSS_SCSS.xml
@@ -27,4 +27,9 @@
       <option name="CSS" value="true" />
     </context>
   </template>
+  <template name="center" value="text-align: center;&#10;$END$" description="center child elements" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="CSS" value="true" />
+    </context>
+  </template>
 </templateSet>
