--- a/templates/MichaelChinn Typescript.xml
+++ b/templates/MichaelChinn Typescript.xml
@@ -21,7 +21,13 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="tsthen" value=".then(($param$) =&gt; {&#10;    $END$&#10;})" description="tsthen" toReformat="false" toShortenFQNames="true">
+  <template name="tsthen" value="then(($param$) =&gt; {&#10;    $END$&#10;})" description="tsthen" toReformat="false" toShortenFQNames="true">
+    <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
+  <template name=".tsthen" value=".then(($param$) =&gt; {&#10;    $END$&#10;})" description="tsthen" toReformat="false" toShortenFQNames="true">
     <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="TypeScript" value="true" />
