WS-2017.2.5 <Michael@RIO Update MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -151,4 +151,11 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
+  <template name="exp" value="export const $NAME$ = $END$" description="export const" toReformat="false" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
