WS-2017.2.5 <Michael@RIO Update MichaelChinn Angular2.xml

--- a/templates/MichaelChinn Angular2.xml
+++ b/templates/MichaelChinn Angular2.xml
@@ -12,7 +12,7 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="ngOutput" value="@Output() $name$ = new EventEmitter$type$();&#10;&#10;on$name$Inner($event) {&#10;    this.$name$.emit($END$);&#10;}" description="component output" toReformat="false" toShortenFQNames="true">
+  <template name="ngOutput" value="@Output() on$name$ = new EventEmitter$type$();&#10;&#10;on$name$Inner($event) {&#10;    this.$name$.emit($END$);&#10;}" description="component output" toReformat="false" toShortenFQNames="true">
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="type" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
