--- a/templates/MichaelChinn Angular2.xml
+++ b/templates/MichaelChinn Angular2.xml
@@ -68,4 +68,9 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
+  <template name="inoutevent" value=", Input, Output, EventEmitter" description="standard imports for new component" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
