--- a/templates/MichaelChinn Typescript.xml
+++ b/templates/MichaelChinn Typescript.xml
@@ -34,4 +34,9 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
+  <template name="me" value=";lk" description="bash me" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="Bash" value="true" />
+    </context>
+  </template>
 </templateSet>
