--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -15,7 +15,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="req" value="var $variable$ = require('$npm$');$END$" description="npm require" toReformat="false" toShortenFQNames="true">
+  <template name="req" value="const $variable$ = require('$npm$');$END$" description="npm require" toReformat="false" toShortenFQNames="true">
     <variable name="variable" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="npm" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
