IU-2021.3.3 <mchinn1@C02FM10JMD6V Update MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -169,4 +169,21 @@
       <option name="HTML" value="true" />
     </context>
   </template>
+  <template name="cprops" value="const {$END$} = props" description="props dissasembler" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="fn" value="($params$) =&gt; {$END$}&#10;" description="arrow function" toReformat="false" toShortenFQNames="true">
+    <variable name="params" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="f" value="$param$ =&gt; $END$" description="simple arrow fn" toReformat="false" toShortenFQNames="true">
+    <variable name="param" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
