IU-2021.3.3 <mchinn1@C02FM10JMD6V Update MichaelChinn.xml

--- a/templates/MichaelChinn.xml
+++ b/templates/MichaelChinn.xml
@@ -186,4 +186,10 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="tsdis" value="// @ts-nocheck" description="Disable Typescript Check" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
